# avis

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindFFMPEG.cmake  FindGLFW.cmake  FindPortAudio.cmake  FindVulkan.cmake
examples/audio/: audio.hpp  ffmpeg.hpp  main.cpp  portaudio.hpp
examples/triangle/: main.cpp  screenquad.cpp  screenquad.hpp  triangle.frag  triangle.vert  triangle_example.cpp  triangle_example.hpp
include/avis/: application.hpp  application_base.hpp
include/avis/audio/: fft.hpp  io.hpp
include/avis/audio/io/: ffmpeg.hpp  portaudio.hpp
include/avis/glfw/: initializer.hpp  utils.hpp  vulkan_window.hpp  window.hpp
include/avis/utils/: algorithm.hpp  constexpr_math.hpp  enums.hpp  expected.hpp  fileio.hpp
include/avis/vulkan/: buffer.hpp  command_buffers.hpp  device.hpp  enumerations.hpp  exception.hpp  expected.hpp  handle.hpp  handles.hpp  image.hpp  instance.hpp  render_pass.hpp  result.hpp  screenquad.hpp  semaphore.hpp  shader.hpp  shader_module.hpp  swapchain.hpp
resources/avis/: ringbuffer.frag  ringbuffer.vert
src/: main.cpp
src/avis/: application.cpp  application_base.cpp  main.cpp  triangle_example.cpp
src/avis/glfw/: vulkan_window.cpp  window.cpp
src/avis/vulkan/: device.cpp  instance.cpp  screenquad.cpp  swapchain.cpp
